modified:   .gitmodules 	modified:   artificial-intelligence-concept/problem-turis-romania-irfansandyy 	modified:   artificial-intelligence-concept/tugas-informed-search-irfansandyy 	new file:   computer-network/jarkom-modul-2-irfansandyy

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "web-programming/webpro"]
 	path = web-programming/webpro
 	url = https://github.com/irfansandyy/webpro.git
+[submodule "computer-network/jarkom-modul-2-irfansandyy"]
+	path = computer-network/jarkom-modul-2-irfansandyy
+	url = https://github.com/Praktikum-NETICS-2025/jarkom-modul-2-irfansandyy.git
