modified:   .gitignore 	new file:   object-oriented-programming/FrsSystem/Dosen.java 	new file:   object-oriented-programming/FrsSystem/Mahasiswa.java 	new file:   object-oriented-programming/FrsSystem/MataKuliah.java 	new file:   object-oriented-programming/FrsSystem/README.TXT 	new file:   object-oriented-programming/FrsSystem/SistemAkademik.java 	new file:   object-oriented-programming/FrsSystem/akademik.json

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@
 *.o
 *.bin
 *.img
-*.class
 **/.vscode/
 **/.cph/
 
@@ -23,3 +22,9 @@
 
 ### PlatformIO Ignore ###
 *.pio
+
+### Java Ignore ###
+*.jar
+*.ctxt
+*.class
+package.bluej
