modified:   .gitmodules 	new file:   artificial-intelligence-concept/ets-project/app.py 	new file:   artificial-intelligence-concept/ets-project/static/app.js 	new file:   artificial-intelligence-concept/ets-project/static/index.html 	new file:   artificial-intelligence-concept/ets-project/static/style.css 	new file:   artificial-intelligence-concept/kka-warehouse-robot 	modified:   artificial-intelligence-concept/main.ipynb 	modified:   artificial-intelligence-concept/problem-kota-sirkuler-irfansandyy 	new file:   artificial-intelligence-concept/project-ets-kka.py 	new file:   artificial-intelligence-concept/testimport.ipynb 	new file:   computer-network/jarkom-modul-3-irfansandyy 	modified:   object-oriented-programming/ets-vending-machine/VendingMachine.java 	modified:   artificial-intelligence-concept/problem-kota-sirkuler-irfansandyy (modified content) 	modified:   artificial-intelligence-concept/problem-turis-romania-irfansandyy (modified content)

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 [submodule "artificial-intelligence-concept/problem-kota-sirkuler-irfansandyy"]
 	path = artificial-intelligence-concept/problem-kota-sirkuler-irfansandyy
 	url = https://github.com/kka-e-25/problem-kota-sirkuler-irfansandyy.git
+[submodule "computer-network/jarkom-modul-3-irfansandyy"]
+	path = computer-network/jarkom-modul-3-irfansandyy
+	url = https://github.com/Praktikum-NETICS-2025/jarkom-modul-3-irfansandyy.git
+[submodule "artificial-intelligence-concept/kka-warehouse-robot"]
+	path = artificial-intelligence-concept/kka-warehouse-robot
+	url = https://github.com/irfansandyy/kka-warehouse-robot.git
